Fix patching of libexec path on Windows

We place all libexec content into bin on Windows.

Task-number: QTBUG-41599
Change-Id: I17c8c2f8183af210b416c1169b3f45c5ab0b0158
Reviewed-by: Alessandro Portale <alessandro.portale@digia.com>